<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Vertical_Style"
    android:background="@mipmap/bg_login">


    <!--账号-->

    <LinearLayout
        style="@style/Login_LinearLayout_Style"
        android:layout_marginTop="@dimen/px860">

        <TextView
            style="@style/Login_TextView_Style"
            android:text="@string/username" />

        <com.zuoyu.laundry.widget.ClearEditText
            android:id="@+id/et_username"
            style="@style/Login_EditText_Style"
            android:hint="@string/please_input_username"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

    <!--密码-->

    <LinearLayout
        style="@style/Login_LinearLayout_Style"
        android:background="@drawable/shape_input_3b">

        <TextView
            style="@style/Login_TextView_Style"
            android:text="@string/password" />

        <com.zuoyu.laundry.widget.ClearEditText
            android:id="@+id/et_password"
            style="@style/Login_EditText_Style"
            android:hint="@string/please_input_password"
            android:inputType="number"
            android:maxLength="20" />
    </LinearLayout>

    <!--忘记密码-->

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px116"
        android:layout_marginEnd="@dimen/px64"
        android:gravity="center_vertical|end"
        android:text="@string/forget_password"
        android:visibility="invisible"
        android:textSize="@dimen/px40" />


    <!--登录按钮-->

    <Button
        android:id="@+id/btn_login"
        style="@style/Common_Button_Style"
        android:text="@string/login" />


</LinearLayout>