<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Vertical_Style">


    <!--提现页面-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/px88"
            android:layout_height="@dimen/px110"
            android:layout_marginTop="@dimen/px66"
            android:contentDescription="@string/app_icon"
            android:src="@mipmap/icon_withdraw" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/username_balance"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/px44" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/app_text"
            android:textColor="@color/font_black"
            android:textSize="@dimen/px90" />

        <Button
            style="@style/Common_Button_Style"
            android:layout_marginBottom="@dimen/px60"
            android:layout_marginTop="@dimen/px50"
            android:background="@drawable/shape_btn_withdraw"
            android:text="@string/apply_for_cash" />

    </LinearLayout>

    <!--提现规则提示-->

    <TextView
        android:id="@+id/tv_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/px60"
        android:layout_marginTop="@dimen/px60"
        android:drawablePadding="@dimen/px30"
        android:drawableStart="@mipmap/icon_warn"
        android:gravity="center"
        android:text="@string/withdraw_rule"
        android:textSize="@dimen/px40" />


    <View style="@style/View_Line_Style" />


    <!--提现规则文本-->

    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/px64"
        android:layout_marginStart="@dimen/px64"
        android:layout_marginTop="@dimen/px40"
        android:text="@string/app_text"
        android:textSize="@dimen/px40" />


</LinearLayout>