<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Vertical_Style">


    <!--横向ListView-->

    <com.zuoyu.laundry.widget.HorizontalListView
        android:id="@id/listView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px148"
        android:background="@color/white" />

    <View
        android:id="@id/line_1"
        style="@style/View_Line_Style" />


    <View
        style="@style/View_Line_Style"
        android:layout_marginTop="@dimen/px50" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingEnd="@dimen/px50"
        android:paddingStart="@dimen/px40">

        <!--月总收成-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px144"
            android:gravity="center_vertical">


            <TextView
                android:id="@id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_total_income"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/tv_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/text_1"
                android:gravity="end"
                android:text="@string/rmb"
                android:textColor="@color/font_black" />

        </RelativeLayout>

        <View
            style="@style/View_Line_Style"
            android:layout_marginStart="@dimen/px50" />

        <!--成单数-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px144"
            android:gravity="center_vertical">

            <ImageView
                android:id="@id/icon_1"
                android:layout_width="@dimen/px60"
                android:layout_height="@dimen/px52"
                android:contentDescription="@string/app_icon"
                android:src="@mipmap/icon_month_count" />


            <TextView
                android:id="@id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px30"
                android:layout_toEndOf="@id/icon_1"
                android:gravity="center"
                android:text="@string/order_count"
                android:textColor="@color/font_black_light"
                android:textSize="@dimen/px40" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/text_1"
                android:gravity="end"
                android:text="@string/app_text"
                android:textColor="@color/font_black" />

        </RelativeLayout>

        <View
            style="@style/View_Line_Style"
            android:layout_marginStart="@dimen/px100" />

        <!--成单提成-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px144"
            android:gravity="center_vertical">

            <ImageView
                android:id="@id/icon_2"
                android:layout_width="@dimen/px64"
                android:layout_height="@dimen/px64"
                android:contentDescription="@string/app_icon"
                android:src="@mipmap/icon_month_commission" />


            <TextView
                android:id="@id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px30"
                android:layout_toEndOf="@id/icon_2"
                android:gravity="center"
                android:text="@string/order_commission"
                android:textColor="@color/font_black_light"
                android:textSize="@dimen/px40" />

            <TextView
                android:id="@+id/tv_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/text_2"
                android:gravity="end"
                android:text="@string/app_text"
                android:textColor="@color/font_black" />

        </RelativeLayout>


    </LinearLayout>

    <View style="@style/View_Line_Style" />

</LinearLayout>