<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ic_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:background="@color/bg_title">

    <!--共用标题栏-->

    <!--左侧图标按钮-->

    <ImageView
        android:id="@+id/iv_left"
        android:layout_width="@dimen/px150"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_icon"
        android:paddingEnd="@dimen/px50"
        android:paddingStart="0dp"
        android:src="@mipmap/icon_back" />


    <!--左侧文字-->

    <TextView
        android:id="@+id/tv_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/px20"
        android:text="@string/app_text"
        android:visibility="gone" />

    <!--标题文字-->

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:ellipsize="end"
        android:gravity="center"
        android:maxEms="10"
        android:maxLength="12"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/bg_theme"
        android:textSize="@dimen/px60" />


    <!--右侧图标按钮-->

    <ImageView
        android:id="@+id/iv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/px45"
        android:contentDescription="@string/app_icon"
        android:visibility="gone" />

    <!--右侧文字-->

    <TextView
        android:id="@+id/tv_right"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px80"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/px45"
        android:drawablePadding="@dimen/px20"
        android:drawableStart="@mipmap/line_white"
        android:gravity="center"
        android:text="@string/app_text"
        android:textColor="@color/bg_theme"
        android:visibility="gone" />


</RelativeLayout>